Add Solana address and admin token to .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,14 @@ DATABASE_URL="file:./server/database/database.sqlite"
 PORT=3001
 NODE_ENV=production
 
-# Admin (MUST be configured - set real values on server)
+# Admin
 ADMIN_USERNAME="admin"
 ADMIN_PASSWORD=""
-ADMIN_TOKEN=""
+ADMIN_TOKEN="admin123"
 
-# Solana (MUST be configured - set real values on server)
+# Solana
 SOLANA_RPC_URL="https://api.mainnet-beta.solana.com"
-SOLANA_MERCHANT_ADDRESS=""
+SOLANA_MERCHANT_ADDRESS="8zS5w8MHSDQ4Pc12DZRLYQ78hgEwnBemVJMrfjUN6xXj"
 
 # Email (Tencent SES) - MUST be configured - set real values on server
 TENCENT_SECRET_ID=""
@@ -24,7 +24,6 @@ TENCENT_SES_SENDER="data@jmichi.com"
 
 # Google Maps API (public client-side key - safe to commit)
 VITE_GOOGLE_MAPS_API_KEY="AIzaSyBVdAS-3mrNYARIDmqn2dP1tG1Khqv5GoM"
-
 
 # DeepSeek API (for translation) - optional
 DEEPSEEK_API_KEY=""
